--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,4 @@
-[functions]
-  directory = "netlify/functions"
+[[headers]]
+  for = "/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
